[gd_scene load_steps=17 format=3 uid="uid://dqax0vfpytli7"]

[ext_resource type="Script" path="res://scripts/combat/scnCombatScene.gd" id="1_kv6ut"]
[ext_resource type="PackedScene" uid="uid://da3ip8d2r73kb" path="res://scenes/combat_backgrounds/DefaultBattleBack.tscn" id="3_r3luu"]
[ext_resource type="PackedScene" uid="uid://cgldnawgqjpj3" path="res://scenes/miscellaneous/BattleTransition.tscn" id="6_hscg6"]
[ext_resource type="Theme" uid="uid://yo85ef7wg3gc" path="res://design/OutlinedLabel.tres" id="7_56rvc"]
[ext_resource type="Theme" uid="uid://drf46n866ot17" path="res://design/CombatButtons.tres" id="8_lqkpn"]
[ext_resource type="Texture2D" uid="uid://b2354usocunh8" path="res://images/sprites/target.png" id="9_d3h28"]
[ext_resource type="PackedScene" uid="uid://d3kxw4js4bdau" path="res://scenes/user_interface/AttributeView.tscn" id="10_60ct5"]
[ext_resource type="PackedScene" uid="uid://xiuccmt1snj8" path="res://scenes/user_interface/CombatLog.tscn" id="11_8bne6"]
[ext_resource type="PackedScene" uid="uid://bipsixd3gwi1r" path="res://scenes/user_interface/TurnIndicator.tscn" id="12_mnv7p"]

[sub_resource type="Animation" id="Animation_ng0qf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.330078, 0.330078)]
}

[sub_resource type="Animation" id="Animation_ilum3"]
resource_name = "Target"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.330078, 0.330078), Vector2(0.361, 0.361), Vector2(0.330078, 0.330078)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h6ab4"]
_data = {
"RESET": SubResource("Animation_ng0qf"),
"Target": SubResource("Animation_ilum3")
}

[sub_resource type="Animation" id="Animation_morbt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-376, -269)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vgh37"]
resource_name = "Show"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-376, -317), Vector2(-376, -301), Vector2(-376, -316.111), Vector2(-376, -317)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 1.7, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b63ig"]
_data = {
"RESET": SubResource("Animation_morbt"),
"Show": SubResource("Animation_vgh37")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cg4vr"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[node name="CombatScene" type="Node2D"]
process_mode = 3
top_level = true
z_index = 999
script = ExtResource("1_kv6ut")

[node name="BattleSounds" type="AudioStreamPlayer" parent="."]
max_polyphony = 16

[node name="BattleMusic" type="AudioStreamPlayer" parent="."]
volume_db = -15.0

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
follow_viewport_enabled = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.5)

[node name="EnemyContainer" type="Node2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(-752, -456)

[node name="Position1" type="Marker2D" parent="ParallaxBackground/ParallaxLayer/EnemyContainer"]
position = Vector2(384, 192)

[node name="Position2" type="Marker2D" parent="ParallaxBackground/ParallaxLayer/EnemyContainer"]
position = Vector2(512, 192)

[node name="Position3" type="Marker2D" parent="ParallaxBackground/ParallaxLayer/EnemyContainer"]
position = Vector2(640, 192)

[node name="Position4" type="Marker2D" parent="ParallaxBackground/ParallaxLayer/EnemyContainer"]
position = Vector2(768, 192)

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="TeamContainer" type="Node2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(-1224, -456)

[node name="Position1" type="Marker2D" parent="ParallaxBackground/ParallaxLayer2/TeamContainer"]
position = Vector2(384, 192)

[node name="Position2" type="Marker2D" parent="ParallaxBackground/ParallaxLayer2/TeamContainer"]
position = Vector2(512, 192)

[node name="Position3" type="Marker2D" parent="ParallaxBackground/ParallaxLayer2/TeamContainer"]
position = Vector2(640, 192)

[node name="Position4" type="Marker2D" parent="ParallaxBackground/ParallaxLayer2/TeamContainer"]
position = Vector2(768, 192)

[node name="Target" type="Sprite2D" parent="."]
position = Vector2(-384, 456)
scale = Vector2(0.330078, 0.330078)
texture = ExtResource("9_d3h28")

[node name="TargetAnimator" type="AnimationPlayer" parent="Target"]
libraries = {
"": SubResource("AnimationLibrary_h6ab4")
}

[node name="CombatCamera" type="Camera2D" parent="."]
position = Vector2(0, -40)
zoom = Vector2(1.15, 1.15)

[node name="DefaultBattleParallax" parent="CombatCamera" instance=ExtResource("3_r3luu")]
visible = false
z_index = -2
position = Vector2(-19, 163)
scale = Vector2(1.5, 1.5)

[node name="BattleTransition" parent="CombatCamera" instance=ExtResource("6_hscg6")]
visible = false
z_index = 1000
position = Vector2(5, 19)

[node name="Interface" type="Control" parent="CombatCamera"]
layout_mode = 3
anchors_preset = 0
offset_top = -21.0
offset_right = 40.0
offset_bottom = 19.0

[node name="Counts" type="Control" parent="CombatCamera/Interface"]
visible = false
anchors_preset = 0
offset_left = -111.0
offset_right = -71.0
offset_bottom = 40.0

[node name="RoundCounter" type="Label" parent="CombatCamera/Interface/Counts"]
z_index = 10
layout_mode = 0
offset_left = 517.0
offset_top = 254.0
offset_right = 623.0
offset_bottom = 277.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 16
text = " 100"
vertical_alignment = 2
uppercase = true

[node name="Label" type="Label" parent="CombatCamera/Interface/Counts/RoundCounter"]
layout_mode = 0
offset_left = -68.0
offset_right = -2.0
offset_bottom = 23.0
theme = ExtResource("7_56rvc")
theme_override_font_sizes/font_size = 16
text = "Round "
vertical_alignment = 2

[node name="TurnCounter" type="Label" parent="CombatCamera/Interface/Counts"]
z_index = 10
layout_mode = 0
offset_left = 517.0
offset_top = 279.0
offset_right = 623.0
offset_bottom = 302.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 16
text = " 100"
vertical_alignment = 2
uppercase = true

[node name="Label" type="Label" parent="CombatCamera/Interface/Counts/TurnCounter"]
layout_mode = 0
offset_left = -68.0
offset_right = -20.0
offset_bottom = 23.0
theme = ExtResource("7_56rvc")
theme_override_font_sizes/font_size = 16
text = "Turn"
vertical_alignment = 2

[node name="TurnIndicator" parent="CombatCamera/Interface" instance=ExtResource("12_mnv7p")]
offset_left = 248.0
offset_top = 168.0
offset_right = 381.0
offset_bottom = 168.0

[node name="LogContainer" parent="CombatCamera/Interface" instance=ExtResource("11_8bne6")]
layout_mode = 0
offset_left = -454.0
offset_top = 197.0
offset_right = 120.0
offset_bottom = 275.0

[node name="Timer" type="Timer" parent="CombatCamera/Interface/LogContainer"]

[node name="TopLog" type="Label" parent="CombatCamera/Interface"]
layout_mode = 0
offset_left = -376.0
offset_top = -269.0
offset_right = 377.0
offset_bottom = -226.0
theme = ExtResource("7_56rvc")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CombatCamera/Interface/TopLog"]
libraries = {
"": SubResource("AnimationLibrary_b63ig")
}

[node name="Inspect" type="Control" parent="CombatCamera/Interface"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AttributeView" parent="CombatCamera/Interface/Inspect" instance=ExtResource("10_60ct5")]
z_index = 100
layout_mode = 1
offset_left = 271.0
offset_top = 108.0
offset_right = 271.0
offset_bottom = 108.0
scale = Vector2(1.1, 1.1)

[node name="HiddenAttributes" parent="CombatCamera/Interface/Inspect/AttributeView" index="0"]
offset_left = -148.0
offset_top = 47.0
offset_right = 152.0
offset_bottom = 144.0
theme_override_styles/panel = SubResource("StyleBoxFlat_cg4vr")

[node name="Attributes" parent="CombatCamera/Interface/Inspect/AttributeView" index="1"]
offset_left = -148.0
offset_right = 152.0

[node name="PanelContainer" type="PanelContainer" parent="CombatCamera/Interface/Inspect"]
z_index = 100
layout_mode = 0
offset_left = -456.0
offset_top = 21.0
offset_right = -126.0
offset_bottom = 291.0

[node name="StatusEffects" type="RichTextLabel" parent="CombatCamera/Interface/Inspect/PanelContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "x Target cannot move!"
scroll_active = false

[node name="SecondaryPanel" type="Control" parent="CombatCamera/Interface"]
visible = false
z_index = 99
layout_mode = 3
anchors_preset = 0
offset_left = -71.0
offset_top = 144.0
offset_right = -31.0
offset_bottom = 184.0

[node name="DescriptionPanel" type="PanelContainer" parent="CombatCamera/Interface/SecondaryPanel"]
layout_mode = 2
offset_left = -129.0
offset_top = 53.0
offset_right = 191.0
offset_bottom = 205.0

[node name="MarginContainer" type="MarginContainer" parent="CombatCamera/Interface/SecondaryPanel/DescriptionPanel"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="RichTextLabel" type="RichTextLabel" parent="CombatCamera/Interface/SecondaryPanel/DescriptionPanel/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 16
text = "ASDasdas"

[node name="OptionContainer" type="PanelContainer" parent="CombatCamera/Interface/SecondaryPanel"]
layout_mode = 0
offset_left = 199.0
offset_top = -123.0
offset_right = 519.0
offset_bottom = 45.0

[node name="Scroller" type="ScrollContainer" parent="CombatCamera/Interface/SecondaryPanel/OptionContainer"]
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 3

[node name="Container" type="VBoxContainer" parent="CombatCamera/Interface/SecondaryPanel/OptionContainer/Scroller"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ActionPanel" type="PanelContainer" parent="CombatCamera/Interface"]
z_index = 10
layout_mode = 0
offset_left = 128.0
offset_top = 197.0
offset_right = 458.0
offset_bottom = 285.0

[node name="MarginContainer" type="MarginContainer" parent="CombatCamera/Interface/ActionPanel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Buttons" type="GridContainer" parent="CombatCamera/Interface/ActionPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_force_pass_scroll_events = false
columns = 3

[node name="Skills" type="Button" parent="CombatCamera/Interface/ActionPanel/MarginContainer/Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("8_lqkpn")
theme_override_font_sizes/font_size = 16
button_mask = 0
text = "SKILLS"

[node name="Guard" type="Button" parent="CombatCamera/Interface/ActionPanel/MarginContainer/Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("8_lqkpn")
theme_override_font_sizes/font_size = 16
button_mask = 0
text = "GUARD "

[node name="Equipment" type="Button" parent="CombatCamera/Interface/ActionPanel/MarginContainer/Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("8_lqkpn")
theme_override_font_sizes/font_size = 16
button_mask = 0
text = "WEAPONS"

[node name="Inspect" type="Button" parent="CombatCamera/Interface/ActionPanel/MarginContainer/Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("8_lqkpn")
theme_override_font_sizes/font_size = 16
button_mask = 0
text = "INSPECT"

[node name="Items" type="Button" parent="CombatCamera/Interface/ActionPanel/MarginContainer/Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("8_lqkpn")
theme_override_font_sizes/font_size = 16
button_mask = 0
text = "ITEMS"

[node name="Escape" type="Button" parent="CombatCamera/Interface/ActionPanel/MarginContainer/Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("8_lqkpn")
theme_override_font_sizes/font_size = 16
button_mask = 0
text = "ABSCOND"

[connection signal="pressed" from="CombatCamera/Interface/ActionPanel/MarginContainer/Buttons/Skills" to="." method="_on_skills_pressed"]
[connection signal="pressed" from="CombatCamera/Interface/ActionPanel/MarginContainer/Buttons/Guard" to="." method="_on_guard_pressed"]
[connection signal="pressed" from="CombatCamera/Interface/ActionPanel/MarginContainer/Buttons/Equipment" to="." method="_on_equipment_pressed"]
[connection signal="pressed" from="CombatCamera/Interface/ActionPanel/MarginContainer/Buttons/Inspect" to="." method="_on_inspect_pressed"]
[connection signal="pressed" from="CombatCamera/Interface/ActionPanel/MarginContainer/Buttons/Items" to="." method="_on_items_pressed"]
[connection signal="pressed" from="CombatCamera/Interface/ActionPanel/MarginContainer/Buttons/Escape" to="." method="_on_escape_pressed"]

[editable path="CombatCamera/Interface/Inspect/AttributeView"]
